Fixed first index miniture jump

--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -129,6 +129,7 @@
   }
 
   &__gallery {
+    // height: 19.5vw;
     height: 19.5vw;
     @include immaFlex($align: center);
     width: 100%;
@@ -158,7 +159,7 @@
     height: 19.5vw;
     width: 13.5vw;
     position: absolute;
-    // box-shadow: 1.5rem 2rem 1rem rgba(0, 0, 0, 0.25);
+    box-shadow: 1.5rem 2rem 1rem rgba(0, 0, 0, 0.25);
     border-radius: 2rem;
     z-index: 20;
     overflow: hidden;
@@ -251,8 +252,9 @@
     position: absolute;
     display: block;
     height: 19.5vw;
+    top: 0;
     width: 13.5vw;
-    // box-shadow: 1.5rem 2rem 1rem rgba(0, 0, 0, 0.25);
+    box-shadow: 1.5rem 2rem 1rem rgba(0, 0, 0, 0.25);
     border-radius: 2rem;
     background-color: #333;
     z-index: 10;
@@ -265,7 +267,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    // border-radius: 2rem;
+    border-radius: 2rem;
   }
 }
 
